--- a/index.html
+++ b/index.html
@@ -2,142 +2,142 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>Marker Generator</title>
-
-<link href="https://cdn.jsdelivr.net/gh/line/seed-jp@latest/seed-jp.css" rel="stylesheet">
+<title>Advanced Marker Generator</title>
 
 <style>
 :root {
   --marker-color: #fff176;
+  --marker-border-color: #ff9800;
+  --marker-border-width: 2px;
   --text-color: #000000;
   --marker-height: 16px;
-  --marker-bottom: 6px;
-  --marker-left: -6px;
-  --marker-width: calc(100% + 12px);
+  --marker-expand: 6px;
   --marker-radius: 10px;
+  --font-size: 28px;
+  --marker-offset: 0px;
 }
 
 body {
   margin: 0;
-  padding: 20px;
-  font-family: 'LINE Seed JP', sans-serif;
-  background: #f4f4f4;
+  padding: 40px;
+  font-family: "Segoe UI", sans-serif;
+  background: #fafafa;
 }
 
-/* UI共通 */
-select, button {
-  padding: 8px 12px;
+.container {
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+.setting {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.setting label {
   font-size: 14px;
-  border-radius: 14px;
-  border: 1px solid #ccc;
-  font-family: 'LINE Seed JP', sans-serif;
+  margin-right: 20px;
 }
 
 textarea {
-  width: 260px;
+  width: 100%;
   height: 80px;
   padding: 10px;
   font-size: 16px;
-  border-radius: 14px;
-  border: 1px solid #ccc;
-  font-family: 'LINE Seed JP', sans-serif;
+  border-radius: 12px;
+  border: 1px solid #ddd;
   box-sizing: border-box;
+  font-family: inherit;
 }
 
 input[type="text"] {
   width: 80px;
   padding: 6px 8px;
-  border-radius: 12px;
-  border: 1px solid #ccc;
-  font-family: 'LINE Seed JP', sans-serif;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  font-family: inherit;
 }
 
 input[type="number"] {
   width: 70px;
   padding: 6px 8px;
-  border-radius: 12px;
-  border: 1px solid #ccc;
-  font-family: 'LINE Seed JP', sans-serif;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  font-family: inherit;
 }
 
-.row {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-top: 12px;
+select {
+  width: 110px;
+  padding: 6px 8px;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  font-family: inherit;
 }
 
-.row label {
-  width: 90px;
-  font-size: 14px;
-}
-
-/* ===== 完全な丸カラーピッカー ===== */
 input[type="color"] {
   -webkit-appearance: none;
   appearance: none;
-  width: 36px;
-  height: 36px;
+  width: 20px;              
+  height: 20px;              
+  box-sizing: border-box;
   padding: 0;
-  border: none;
-  border-radius: 50%;
-  overflow: hidden;
+  border-radius: 10px;
+  border: 1px solid #ddd;
   cursor: pointer;
   background: none;
 }
 
 input[type="color"]::-webkit-color-swatch-wrapper {
   padding: 0;
-  border-radius: 50%;
 }
 
 input[type="color"]::-webkit-color-swatch {
   border: none;
-  border-radius: 50%;
+  border-radius: 8px;
 }
 
 input[type="color"]::-moz-color-swatch {
   border: none;
-  border-radius: 50%;
+  border-radius: 8px;
 }
 
-/* ボタン */
-button {
-  margin-top: 18px;
-  width: 260px;
-  cursor: pointer;
-  background: #000;
-  color: #fff;
-  border: none;
-  transition: 0.2s ease;
+.divider {
+  height: 1px;
+  background: #e5e5e5;
+  margin: 8px 0;
 }
 
-button:hover {
-  opacity: 0.85;
-}
-
-/* プレビュー */
 .preview {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   display: inline-block;
-  margin-top: 30px;
-  font-size: 28px;
+  font-size: var(--font-size);
   padding: 0 12px;
   line-height: 1.4;
-  white-space: pre-wrap;
+  white-space: nowrap;
+  width: fit-content;
+  max-width: none;
+  text-align: center;
   color: var(--text-color);
-  font-family: 'LINE Seed JP', sans-serif;
+  font-family: inherit;
 }
 
 .preview::after {
   content: "";
   position: absolute;
-  left: var(--marker-left);
-  bottom: var(--marker-bottom);
-  width: var(--marker-width);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, calc(-50% + var(--marker-offset)));
+  width: calc(100% + var(--marker-expand) * 2);
   height: var(--marker-height);
   background: var(--marker-color);
   border-radius: var(--marker-radius);
+  border: var(--marker-border-width) solid var(--marker-border-color);
   z-index: -1;
 }
 
@@ -149,44 +149,27 @@ button:hover {
 
 <body>
 
-<h2>蛍光マーカーツール</h2>
-
+<div class="container">
+  
+<h2>Marker Tool</h2>
+  
 <textarea id="inputText" placeholder="ここに文字を入力"></textarea>
 
-<div class="row">
-  <label>マーカー色</label>
-  <input type="color" id="markerColorPicker" value="#fff176">
-  <input type="text" id="markerColorCode" value="#fff176">
+<div class="setting">
+  <label>Text color</label>
+  <div>
+    <input type="color" id="textColorPicker" value="#000000">
+    <input type="text" id="textColorCode" value="#000000">
+  </div>
 </div>
 
-<div class="row">
-  <label>文字色</label>
-  <input type="color" id="textColorPicker" value="#000000">
-  <input type="text" id="textColorCode" value="#000000">
+<div class="setting">
+  <label>Text size</label>
+  <input type="number" id="fontSize" value="28">
 </div>
 
-<div class="row">
-  <label>太さ</label>
-  <input type="number" id="markerHeight" value="16">
-</div>
-
-<div class="row">
-  <label>位置</label>
-  <input type="number" id="markerBottom" value="6">
-</div>
-
-<div class="row">
-  <label>横拡張</label>
-  <input type="number" id="markerExpand" value="6">
-</div>
-
-<div class="row">
-  <label>丸み</label>
-  <input type="number" id="markerRadius" value="10">
-</div>
-
-<div class="row">
-  <label>文字太さ</label>
+<div class="setting">
+  <label>Text weight</label>
   <select id="fontWeight">
     <option value="400">Regular</option>
     <option value="500">Medium</option>
@@ -196,39 +179,87 @@ button:hover {
   </select>
 </div>
 
-<button onclick="generate()">生成</button>
+<div class="divider"></div>
+
+<div class="setting">
+  <label>Marker Color</label>
+  <div>
+    <input type="color" id="markerColorPicker" value="#fff176">
+    <input type="text" id="markerColorCode" value="#fff176">
+  </div>
+</div>
+
+<div class="setting">
+  <label>Marker Height</label>
+  <input type="number" id="markerHeight" value="16">
+</div>
+
+<div class="setting">
+  <label>Marker Width</label>
+  <input type="number" id="markerExpand" value="6">
+</div>
+
+<div class="setting">
+  <label>Marker Radius</label>
+  <input type="number" id="markerRadius" value="10">
+</div>
+
+<div class="setting">
+  <label>Marker Position</label>
+  <input type="number" id="markerOffset" value="0">
+</div>
+
+<div class="setting">
+  <label>Edge Color</label>
+  <div>
+    <input type="color" id="markerBorderPicker" value="#ff9800">
+    <input type="text" id="markerBorderCode" value="#ff9800">
+  </div>
+</div>
+
+<div class="setting">
+  <label>Edge Height</label>
+  <input type="number" id="markerBorderWidth" value="2">
+</div>
 
 <div id="preview" class="preview"></div>
 
+</div>
+
 <script>
-
 function generate() {
+  preview.textContent = inputText.value;
+  preview.style.fontWeight = fontWeight.value;
 
-  const text = document.getElementById("inputText").value;
-  const markerColor = document.getElementById("markerColorCode").value;
-  const textColor = document.getElementById("textColorCode").value;
-  const markerHeight = document.getElementById("markerHeight").value;
-  const markerBottom = document.getElementById("markerBottom").value;
-  const markerExpand = document.getElementById("markerExpand").value;
-  const markerRadius = document.getElementById("markerRadius").value;
-  const fontWeight = document.getElementById("fontWeight").value;
-
-  const preview = document.getElementById("preview");
-
-  preview.textContent = text;
-  preview.style.fontWeight = fontWeight;
-
-  document.documentElement.style.setProperty('--marker-color', markerColor);
-  document.documentElement.style.setProperty('--text-color', textColor);
-  document.documentElement.style.setProperty('--marker-height', markerHeight + "px");
-  document.documentElement.style.setProperty('--marker-bottom', markerBottom + "px");
-  document.documentElement.style.setProperty('--marker-radius', markerRadius + "px");
-  document.documentElement.style.setProperty('--marker-left', -markerExpand + "px");
-  document.documentElement.style.setProperty('--marker-width',
-    "calc(100% + " + (markerExpand * 2) + "px)");
-
+  document.documentElement.style.setProperty('--font-size', fontSize.value + "px");
+  document.documentElement.style.setProperty('--marker-color', markerColorCode.value);
+  document.documentElement.style.setProperty('--marker-border-color', markerBorderCode.value);
+  document.documentElement.style.setProperty('--marker-border-width', markerBorderWidth.value + "px");
+  document.documentElement.style.setProperty('--text-color', textColorCode.value);
+  document.documentElement.style.setProperty('--marker-height', markerHeight.value + "px");
+  document.documentElement.style.setProperty('--marker-expand', markerExpand.value + "px");
+  document.documentElement.style.setProperty('--marker-radius', markerRadius.value + "px");
+  document.documentElement.style.setProperty('--marker-offset', markerOffset.value + "px");
 }
 
+document.querySelectorAll("input, select, textarea").forEach(el=>{
+  el.addEventListener("input", generate);
+});
+
+[
+ ["markerColorPicker","markerColorCode"],
+ ["markerBorderPicker","markerBorderCode"],
+ ["textColorPicker","textColorCode"]
+].forEach(([p,c])=>{
+  document.getElementById(p).addEventListener("input",()=>{
+    document.getElementById(c).value=document.getElementById(p).value;
+  });
+  document.getElementById(c).addEventListener("input",()=>{
+    document.getElementById(p).value=document.getElementById(c).value;
+  });
+});
+
+generate();
 </script>
 
 </body>
